@@ -688,6 +688,26 @@ enum DF
   DF_STATIC_TLS = 0x10
 };
 
+// Flags found in the DT_FLAGS_1 dynamic element.
+
+enum DF_1
+{
+  DF_1_NOW = 0x1,
+  DF_1_GLOBAL = 0x2,
+  DF_1_GROUP = 0x4,
+  DF_1_NODELETE = 0x8,
+  DF_1_LOADFLTR = 0x10,
+  DF_1_INITFIRST = 0x20,
+  DF_1_NOOPEN = 0x40,
+  DF_1_ORIGIN = 0x80,
+  DF_1_DIRECT = 0x100,
+  DF_1_TRANS = 0x200,
+  DF_1_INTERPOSE = 0x400,
+  DF_1_NODEFLIB = 0x800,
+  DF_1_NODUMP = 0x1000,
+  DF_1_CONLFAT = 0x2000,
+};
+
 // Version numbers which appear in the vd_version field of a Verdef
 // structure.
 
